fix: hover navbar item, attempt to solve jump scrollbar

--- a/client/src/sass/navbar-client.scss
+++ b/client/src/sass/navbar-client.scss
@@ -34,6 +34,13 @@ a{
     }
 }
 
+.menu-item{
+    transition: 0.3s;
+    &:hover{
+        color: $primary-color!important;
+    }
+}
+
 .items-navbar-wrapper{
     position: absolute;
     height: 190px;
